# gpu.cpp

./: .gitignore  .gitmodules  CMakeLists.txt  DEVELOPERS.md  Doxyfile  Makefile  README.md  README_cn.md  build.py  download_dawn.sh  flake.nix  gpu.cpp  gpu.h  gpu.hpp  half.cpp  half.h  kernels.h  revert.patch  run.cpp  setup.cpp  setup.py  tutorial.md
.github/workflows/: build.yml
bindings/haskell/: CHANGELOG.md  Makefile  gpu-cpp.cabal
bindings/haskell/app/: Main.hs
bindings/haskell/src/: GpuCpp.hs
bindings/haskell/src/GpuCpp/: Types.hs
bindings/haskell/test/: Main.hs
bindings/python/: Makefile  gpu_cpp.cpp  test_gpu_cpp.py
cmake/: dawn.cmake  example.cmake  find_gpu.cmake  gpu.cmake  webgpu.cmake
cmake/templates/: index.html.in
docs/: gpuflow.md
docs/doxygen-awesome/: doxygen-awesome.css
examples/: Makefile  README.md
examples/float16/: CMakeLists.txt  Makefile  run.cpp
examples/gpu_puzzles/: CMakeLists.txt  Makefile  key.cpp  run.cpp
examples/hello_gpu/: CMakeLists.txt  Makefile  run.cpp
examples/hello_world/: CMakeLists.txt  Makefile  run.cpp
examples/matmul/: CMakeLists.txt  Makefile  run.cpp
examples/physics/: CMakeLists.txt  Makefile  run.cpp
examples/raymarch/: CMakeLists.txt  Makefile  run.cc  run.cpp
examples/render/: CMakeLists.txt  Makefile  run.cpp
examples/shadertui/: CMakeLists.txt  Makefile  aurora.wgsl  boat.wgsl  default.wgsl  fluid.wgsl  gradient_flow.wgsl  julia.wgsl  life.wgsl  mandelbrot.wgsl  metaball.wgsl  particles.wgsl  reaction_diffusion.wgsl  roundrect1.wgsl  roundrect2.wgsl  run.cpp  script.py  shader.wgsl  shapes.wgsl  voronoi.wgsl
examples/tanh/: Makefile  run.cpp
examples/transformer/: Makefile  run.cpp
examples/transpose/: Makefile  run.cpp
examples/web/: CMakeLists.txt  run.cpp
examples/webgpu_from_scratch/: CMakeLists.txt  run.cpp
examples/webgpu_intro/: CMakeLists.txt  Makefile  run.cpp
experimental/: wgsl.h
experimental/audio/: Makefile
experimental/fasthtml/: Makefile  run.cpp  run.py  shadertui_web.cpp
experimental/fasthtml/components/: code_editor.js  code_editor.py  toolbar.py
experimental/fasthtml/gpu_puzzles/: Makefile  client.js  code_editor.js  evaluator.h  run.cpp  run.py  scaffold.h  webprint.h
experimental/fasthtml/hello_world/: .sesskey  run.py
experimental/fluid/: Makefile  README.md  run.cpp
experimental/kernels/: Makefile  dev  gpt2_wasm.c  gpt2_webgpu.cpp  gpt2_webgpu_aot.cpp  kernels.h  kernels_c.cpp  kernels_c.h  ops.cpp  ops.hpp  ops_aot.cpp  ops_aot.hpp  reduce.cpp  run.cpp  term.html
experimental/kernels/tanh/: CMakeLists.txt  Makefile
experimental/kernels/unittest_llmc/: unittest_kernels.cpp  unittest_kernels.h
experimental/legacy/: README.md
experimental/legacy/audio/: Makefile  run.cpp
experimental/legacy/fasthtml_test/: Makefile  run.cpp  run.py
experimental/legacy/transformer/: Makefile  run.cpp  shaders.h  test_kernels.cpp
experimental/multikernel/: multikernel.h
experimental/profiler/: metal.hpp  metal.mm
experimental/transformer/: Makefile  run.cpp  shaders.h  test_kernels.cpp
experimental/wasm/: Makefile  gpu.js  hello.html  index.html  run.cpp  wasm.h
experimental/wasm/emscripten/: CMakeLists.txt  Makefile
experimental/wasm/pure_wasm/: README.md  gpu.js  hello.cpp  index.html
experimental/web/: Makefile  README.md  custom_shell.html  run.cpp
nn/: shaders.h
numeric_types/: half.cpp  half.h
test/: test_gpu.cpp
utils/: array_utils.h  array_utils.hpp  experimental.h  functor.h  logging.h  logging.hpp  reference_impls.h  shaders.h  test_kernels.cpp  tui.h
